# recorder

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  bitbucket-pipelines.yml  build.rs  recorder.default  rustfmt.toml  sonar-project.properties
.cargo/: config.toml
.github/scripts/: check_license_policy.py  generate_sbom.sh  validate_notice.py
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
src/: .gitignore  args.rs  lib.rs  main.rs  schema.rs  test.rs
src/schema/edgefirst/msg/: Detect.msg
src/schema/foxglove_msgs/msg/: CompressedImage.msg  ImageAnnotation.msg
src/schema/sensor_msgs/msg/: Detect.msg  ModelInfo.msg  RadCube.msg
src/schemas/edgefirst_msgs/msg/: Detect.msg  DmaBuffer.msg  LocalTime.msg  Mask.msg  Model.msg  ModelInfo.msg  RadarCube.msg  RadarInfo.msg
src/schemas/foxglove_msgs/msg/: CompressedVideo.msg
src/schemas/geometry_msgs/msg/: TransformStamped.msg
src/schemas/sensor_msgs/msg/: CompressedImage.msg  Image.msg
src/schemas/visualization_msgs/: Marker.msg
