[package]
name = "maivin-recorder"
description = "Maivin MCAP Recorder"
authors = ["Au-Zone Technologies"]
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[dependencies]
anyhow = "1.0.95"
bus = "2.4.1"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive", "env"] }
env_logger = "0.11.6"
hostname = "0.4.0"
log = "0.4.25"
mcap = "0.15.0"
serde_json = "1.0.138"
signal-hook = "0.3.17"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "io-std"] }
zenoh = "1.2.1"

[build-dependencies]
include_walk = "0.3.2"
