[package]
name = "maivin-recorder"
description = "Maivin MCAP Recorder"
authors = ["Au-Zone Technologies"]
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[dependencies]
anyhow = "1.0.98"
bus = "2.4.1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive", "env"] }
env_logger = "0.11.8"
hostname = "0.4.1"
log = "0.4.27"
mcap = "0.18.0"
serde_json = "1.0.140"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time", "io-std"] }
zenoh = "1.3.4"

[build-dependencies]
include_walk = "0.3.2"
