[package]
name = "edgefirst-recorder"
description = "EdgeFirst MCAP Recorder"
authors = ["Au-Zone Technologies"]
repository = "https://github.com/EdgeFirstAI/recorder"
license = "Apache-2.0"
version = "1.5.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[dependencies]
anyhow = "1.0.98"
bus = "2.4.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive", "env"] }
env_logger = "0.11.8"
fs2 = "0.4.3"
hostname = "0.4.1"
log = "0.4.27"
mcap = "0.18.0"
serde_json = "1.0.140"
signal-hook = "0.3.18"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time", "io-std"] }
zenoh = "1.4.0"

[build-dependencies]
include_walk = "0.3.2"
